// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`schemaExtractorPlugin should extract a basic contract with public and private methods 1`] = `
{
  "methods": [],
  "state": {
    "properties": {
      "count": {
        "type": "number",
      },
      "startCoin": {
        "properties": {
          "amount": {
            "type": "string",
          },
          "denom": {
            "type": "string",
          },
        },
        "type": "object",
      },
      "tokens": {
        "items": {
          "properties": {
            "amount": {
              "type": "string",
            },
            "denom": {
              "type": "string",
            },
          },
          "type": "object",
        },
        "type": "array",
      },
    },
    "type": "object",
  },
}
`;

exports[`schemaExtractorPlugin should extract methods and state from classes inheritance-contract 1`] = `
{
  "methods": [
    {
      "name": "increment",
      "parameters": [],
      "returnType": {
        "type": "any",
      },
    },
    {
      "name": "baseMethod",
      "parameters": [],
      "returnType": {
        "type": "any",
      },
    },
  ],
  "state": {
    "properties": {
      "count": {
        "type": "number",
      },
    },
    "type": "object",
  },
}
`;

exports[`schemaExtractorPlugin should extract methods from classes public methods 1`] = `
{
  "methods": [
    {
      "name": "increment",
      "parameters": [],
      "returnType": {
        "type": "any",
      },
    },
    {
      "name": "addToken",
      "parameters": [
        {
          "name": "denom",
          "type": {
            "type": "string",
          },
        },
        {
          "name": "amount",
          "type": {
            "type": "string",
          },
        },
      ],
      "returnType": {
        "type": "any",
      },
    },
    {
      "name": "removeToken",
      "parameters": [
        {
          "name": "index",
          "type": {
            "type": "number",
          },
        },
      ],
      "returnType": {
        "type": "any",
      },
    },
  ],
  "state": {
    "properties": {
      "count": {
        "type": "number",
      },
      "startCoin": {
        "properties": {
          "amount": {
            "type": "string",
          },
          "denom": {
            "type": "string",
          },
        },
        "type": "object",
      },
      "tokens": {
        "items": {
          "properties": {
            "amount": {
              "type": "string",
            },
            "denom": {
              "type": "string",
            },
          },
          "type": "object",
        },
        "type": "array",
      },
    },
    "type": "object",
  },
}
`;
